--- a/devtools/client/themes/variables.css
+++ b/devtools/client/themes/variables.css
@@ -197,13 +197,13 @@
   --toolbarbutton-hover-background: transparent;
   --toolbarbutton-checked-background: linear-gradient(rgba(0, 0, 0, 0.1), transparent);
   --toolbarbutton-checked-color: var(--theme-body-color);
-  --toolbarbutton-hover-border: 1px solid silver;
+  --toolbarbutton-hover-border: 1px solid var(--theme-splitter-color);
   --toolbarbutton-checked-border: var(--toolbarbutton-hover-border);
 }
 
 :root.theme-firebug[platform="win"] {
   --theme-tab-toolbar-background: #d8eaf9 linear-gradient(rgba(255, 255, 255, 0.8), transparent);
-  --theme-toolbar-background: #f0f1f2 linear-gradient(rgba(255, 255, 255, 0.8), transparent);
+  --theme-toolbar-background: #d8eaf9 linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.2));
   --theme-toolbar-tab-selected-background: rgb(247, 251, 254);
   --theme-splitter-color: #aabccf;
 }
