--- a/devtools/client/themes/widgets.css
+++ b/devtools/client/themes/widgets.css
@@ -408,7 +408,7 @@ widgets.css is overwritten. */
 .theme-firebug .breadcrumbs-widget-container .scrollbutton-down {
   padding: 0;
   box-shadow: none;
-  outline: 1px solid silver;
+  outline: 1px solid var(--theme-splitter-color);
 }
 
 .theme-firebug .breadcrumbs-widget-container .scrollbutton-up:hover,
